[tool.poetry]
name = "TournamentStreamHelper"
version = "6.0.0"
description = "A Stream helper for fighting game tournaments!"
authors = ["Isatis <isatis@foxes.gay>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
httpx = "^0.27.0"
deepdiff = "^7.0.1"
asyncio = "^3.4.3"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7.2"
orjson = "^3.10.3"
websockets = "^12.0"
socketio = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
